# CVS_labs

./: README.md
lab1/: CMakeLists.txt  main.cpp
lab1/libs/: approximation.cpp  approximation.h  matrix.cpp  matrix.h  rectangle.cpp  rectangle.h
lab2/: CMakeLists.txt  main.cpp
lab3.1/lab3.1/: main.cpp
lab3.1/lab3.1/libs/: global.h  process_image.cpp  process_image.h  read&check.cpp  trackbars.cpp  trackbars.h
lab4/lab4/: main.cpp
lab4/lab4/libs/: CV_Fourier.cpp  CV_Fourier.h  Convolution.cpp  Convolution.h  Correlation.cpp  Correlation.h  Filters.h  LF_HF_filter.cpp  LF_HF_filter.h  ShowManyImg.cpp  ShowManyImg.h  global.h  read&check.cpp  read&check.h
